CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(BaseSocket)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -g -fPIC -Wall -D_REENTRANT -DUSE_APACHE -DNO_STRING_CIPHER ")
SET(TARGET "basesocket")
SET(LIBRARY_OUTPUT_PATH ../lib/release_linux/libBase)

AUX_SOURCE_DIRECTORY(frame/netserver SOURCE_DIRS_NET)
AUX_SOURCE_DIRECTORY(mdf SOURCE_DIRS_MDF)

INCLUDE_DIRECTORIES(../include)

#add_executable(BaseSocket ${SOURCE_DIRS})

ADD_LIBRARY(${TARGET} STATIC ${SOURCE_DIRS_NET} ${SOURCE_DIRS_MDF})

TARGET_LINK_LIBRARIES(${TARGET} -lnsl -lc -lm -lpthread -lstdc++)

